languages/CNNTrainLang/src/test/resources/invalid_parser_tests/WrongParameterName.cnnt
/* (c) https://github.com/MontiCore/monticore */
configuration WrongParameterName{
     num_epoch : 5
     batch_size : 100
     optmizer : adam
 }
